--- a/rts/lra-examples/coordinator-quarkus/src/main/resources/application.properties
+++ b/rts/lra-examples/coordinator-quarkus/src/main/resources/application.properties
@@ -4,3 +4,6 @@ quarkus.ssl.native=true
 
 # allow Swagger in prod mode
 quarkus.swagger-ui.always-include=true
+
+# enable health endpoints
+quarkus.smallrye-health.enabled=true
