--- a/rts/lra/trip-controller/pom.xml
+++ b/rts/lra/trip-controller/pom.xml
@@ -70,6 +70,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-health</artifactId>
+        </dependency>
 
         <!-- LRA JAXRS filters -->
         <dependency>
